--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.9
 
-WORKDIR /backend
+WORKDIR /mybackend
 
-COPY ./requirements.txt /backend/requirements.txt
+COPY ./requirements.txt /mybackend/requirements.txt
 
-RUN pip install --no-cache-dir --upgrade -r /backend/requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /mybackend/requirements.txt
 
-COPY ./ /backend
+COPY ./ /mybackend
 
 CMD ["uvicorn", "src.main:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
